[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
      packages = ["fsar_applyLUTs"]

[project]
name = "fsar_applyLUTs"
version = "1.0.0"
dependencies = [
    "numpy>=1.26.4.0",
    "rasterio>=1.4a2",
    "scipy>=1.12.0",
    "rio-cogeo>=5.0.0"
]
requires-python = ">= 3.10"
description = "Python script to reraster data"
readme = "README.md"
# A list of classifiers that provide metadata about the project, such as supported Python versions.
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/DLR-HR/fsar_applyluts"
"Source" = "https://github.com/DLR-HR/fsar_applyluts"

[project.scripts]
apply_LUT = "fsar_applyLUTs.geocoding:main"
